automatically backed up by learn

--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -5,7 +5,7 @@
   <% end %>
 
   <% @songs.each do |song| %>
-    <li><%= display_artist(song) %> - <%= link_to song.title, song_path(song) %></li>
+    <li><%= display_artist(song) %> - <%= link_to song.title, song_path(song) %> - <%= link_to delete, song_path(song) %></li>
   <% end %>
 </ul>
 <br>
